[tool.poetry]
name = "nlp"
version = "0.1.0"
description = ""
authors = ["Lucas Vittor <lvvittor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
jupyterlab = "^4.0.6"
tqdm = "^4.66.1"
ipykernel = "^6.25.2"
pyarrow = "^13.0.0"

[tool.poetry.group.dev.dependencies]
pandas = "^2.1.1"
numpy = "^1.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
