[tool.poetry]
name = "nlp"
version = "0.1.0"
description = ""
authors = ["Lucas Vittor <lvvittor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
jupyterlab = "^4.0.6"
ipykernel = "^6.25.2"
pyarrow = "^13.0.0"
matplotlib = "^3.8.0"
wordcloud = "^1.9.2"
seaborn = "^0.13.0"
textblob = "^0.17.1"
pandas = "^2.1.1"
numpy = "^1.26.0"
nltk = "^3.8.1"
scikit-learn = "^1.3.1"
xgboost = "^2.0.0"
lightgbm = "^4.1.0"
gensim = "^4.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
